--- a/vignettes/lef_anole_vignette.Rmd
+++ b/vignettes/lef_anole_vignette.Rmd
@@ -20,3 +20,14 @@ library(tidyverse)
 anoles <- ggplot(data = lef_anole, aes(x=HEIGHT, y = Tail)) + geom_point(aes(color = SEASON, shape = SEASON), alpha = 0.8) + labs(title = "Height and Tail Length of Anoles By Season of Data Collection") + xlim(0,25)
 anoles
 ```
+
+```{r}
+ggplot(data = lef_anole, aes(x=HEIGHT, y = Tail)) + geom_point(aes(color = SPECIES, shape = SPECIES), alpha = 0.8) + labs(title = "Height and Tail Length of Anoles By Season of Data Collection")
+```
+
+```{r}
+sex <- alohaal::lef_anole %>%
+filter(`SEX/AGE` == "M" | `SEX/AGE` == "F")
+
+ggplot(data = sex, aes(x=HEIGHT, y = Tail)) + geom_point(aes(color = `SEX/AGE`, shape = `SEX/AGE`), alpha = 0.8) + labs(title = "Height and Tail Length of Anoles By Sex") + xlim(0,25)
+```
