--- a/vignettes/sbc_abundance_vignette.Rmd
+++ b/vignettes/sbc_abundance_vignette.Rmd
@@ -20,6 +20,6 @@ library(tidyverse)
 sbc_abundance$SIZE <-
   replace(sbc_abundance$SIZE, sbc_abundance$SIZE < 0, NA)
 hist <- ggplot(data = sbc_abundance, aes(x = SIZE)) +
-  geom_histogram(alpha = 0.5) + theme_minimal() + scale_fill_manual(values = c("dodgerblue1"))
+  geom_histogram(alpha = 0.5) + theme_minimal()  + xlim(0, 100) + xlab("Size of Fish(cm)") + ylab("Count") + labs(title = "Count of Fish Sizes at SBC LTER")
 hist
 ```
