--- a/vignettes/ntl_ice_vignette.Rmd
+++ b/vignettes/ntl_ice_vignette.Rmd
@@ -19,23 +19,25 @@ library(alohaal)
 library(tidyverse)
 ```
 
-```{r, fig.width = 5, dpi = 100}
+```{r ice_duration, fig.width = 5}
 # Add title, labels, update legend, add trendlines
-ggplot(ntl_ice %>% filter(!is.na(ice_duration)), aes(x = year)) +
+ice_duration <- ggplot(ntl_ice %>% filter(!is.na(ice_duration)), aes(x = year)) +
   geom_line(aes(y = ice_duration, color = lakeid), alpha = 0.7) + 
-  theme_minimal()
+  theme_minimal() +
+  labs(x = "Year", y = "Ice Duration (Days)", title = "Ice Duration of Madison Lakes")
+ice_duration
 ```
 
-```{r}
+```{r avg_ice, fig.width=5}
 # Average Ice duration across all three lakes
 avg_ice <- ntl_ice %>% 
   group_by(year) %>% 
   summarise(ice_duration = mean(ice_duration))
 
-ggplot(avg_ice %>% filter(!is.na(ice_duration)), aes(x = year, y = ice_duration)) +
+avg_ice_duration <- ggplot(avg_ice %>% filter(!is.na(ice_duration)), aes(x = year, y = ice_duration)) +
   geom_line(alpha = 0.7) + 
   theme_minimal() +
-  geom_smooth(method=lm,  
-                se=FALSE,
-              color = "45b6fe")
+  geom_smooth(method=lm, se=FALSE, color = "45b6fe") +
+  labs(y = "Ice Duration (Days)", x = "Year", title = "Average Ice Duration")
+avg_ice_duration
 ```
