--- a/vignettes/ntl_ice_vignette.Rmd
+++ b/vignettes/ntl_ice_vignette.Rmd
@@ -19,58 +19,104 @@ library(alohaal)
 library(tidyverse)
 ```
 
+According to the [EPA](https://www.epa.gov/climate-indicators/climate-change-indicators-lake-ice#ref2), lake ice duration can be an indicator of climate change. This is because lake ice is dependent on several environmental factors, so changes in these factors will influence the formation of ice on top of lakes. As a result, the study and analysis of lake ice formation can inform scientists about how quickly the climate is changing, and are critical to minimizing disruptions to lake ecosystems. We can examine the ice duration of Lake Mendota, Lake Monona, and Lake Wingra, three lakes in the Madison, WI area.
+
 ```{r box_plot, fig.width=5}
-lake_ice <- ggplot(data = ntl_ice %>% filter(!is.na(ice_duration)), aes(x = lakeid, y = ice_duration)) + geom_boxplot(aes(color = lakeid, shape = lakeid), alpha = 0.8, width = 0.5) +
+lake_ice <-
+  ggplot(data = ntl_ice %>% filter(!is.na(ice_duration)), aes(x = lakeid, y = ice_duration)) + geom_boxplot(aes(color = lakeid, shape = lakeid),
+                                                                                                            alpha = 0.8,
+                                                                                                            width = 0.5) +
   theme_minimal() +
   labs(title = "Ice Duration of Lakes in the Madison Area",
        y = "Ice Duration (Days)", x = "Lake")
 lake_ice
 ```
+Time Series Plot:
 
 ```{r ice_duration, fig.width = 5}
 # Add title, labels, update legend, add trendlines
-ice_duration <- ggplot(ntl_ice %>% filter(!is.na(ice_duration)), aes(x = year)) +
-  geom_line(aes(y = ice_duration, color = lakeid), alpha = 0.7) + 
+ice_duration <-
+  ggplot(ntl_ice %>% filter(!is.na(ice_duration)), aes(x = year)) +
+  geom_line(aes(y = ice_duration, color = lakeid), alpha = 0.7) +
   theme_minimal() +
   labs(x = "Year", y = "Ice Duration (Days)", title = "Ice Duration of Lakes in the Madison Area")
 ice_duration
 ```
 
-
+Since the box plots and time series plots are similar, we can average the ice duration across all three lakes:
 ```{r avg_ice, fig.width=5}
 # Average Ice duration across all three lakes
-avg_ice <- ntl_ice %>% 
-  group_by(year) %>% 
-  summarise(ice_duration = mean(ice_duration)) %>% 
+avg_ice <- ntl_ice %>%
+  group_by(year) %>%
+  summarise(ice_duration = mean(ice_duration)) %>%
   rename(avg_ice_duration = ice_duration)
+```
 
-avg_ice_duration_plot <- ggplot(avg_ice %>% filter(!is.na(avg_ice_duration)), aes(x = year, y = avg_ice_duration)) +
-  geom_line(alpha = 0.7) + 
+Time Series Plot:
+
+```{r, fig.width = 5}
+avg_ice_duration_plot <-
+  ggplot(avg_ice %>% filter(!is.na(avg_ice_duration)), aes(x = year, y = avg_ice_duration)) +
+  geom_line(alpha = 0.7) +
   theme_minimal() +
-  geom_smooth(method=lm, se=FALSE, color = "blue", linetype="dashed") + #"45b6fe"
+  geom_smooth(
+    method = lm,
+    se = FALSE,
+    color = "blue",
+    linetype = "dashed"
+  ) + #"45b6fe"
   labs(y = "Ice Duration (Days)", x = "Year", title = "Average Ice Duration")
 avg_ice_duration_plot
 ```
 
-```{r temp, fig.width = 5}
-ggplot(ntl_ice %>% filter(!is.na(ave_air_temp_adjusted)), aes(x = year, y = ave_air_temp_adjusted)) +
-  geom_line(alpha = 0.7) + 
-  theme_minimal() +
-  geom_smooth(method=lm, se=FALSE, color = "blue", linetype="dashed") + #"45b6fe"
-  labs(y = "Temperature", x = "Year", title = "Mean Annual Temperature in Madison, WI")
+The average ice duration in Madison is trending downwards. What environmental factors are influencing this change? [Research](http://hpkx.cnjournals.com/uploadfile/news_images/hpkx/2019-03-14/s41558-018-0393-56789.pdf) suggests that mean annual temperature is one of the primary factors that alter lake ice formation. We can look at the mean annual temperature of Madison, WI, to see if there is a corresponding change in climate that may have influenced the change in ice duration.
 
+(*Note that according to the original metadata: "Daily temperature data prior to 1884 were estimated from 3 times per day sampling and biases are expected and should not be comparable with data after that time."*)
+
+Time Series Plot:
+
+```{r temp, fig.width = 5}
+temp_plot <- ggplot(ntl_ice %>% filter(!is.na(ave_air_temp_adjusted)),
+       aes(x = year, y = ave_air_temp_adjusted)) +
+  geom_line(alpha = 0.7) +
+  theme_minimal() +
+  geom_smooth(
+    method = lm,
+    se = FALSE,
+    color = "blue",
+    linetype = "dashed"
+  ) + #"45b6fe"
+  labs(y = "Temperature", x = "Year", title = "Mean Annual Temperature in Madison, WI")
+temp_plot
 ```
+
+Since the mean annual temperature is trending upwards over the years, there may be a relationship between temperature and ice duration.
+
+Plot the temperature against the ice duration of each of the three lakes:
+
 ```{r scatter, fig.width = 5}
-scatter <- ggplot(data = ntl_ice %>% filter(!is.na(ave_air_temp_adjusted) &
-                               !is.na(ice_duration)), aes(y = ice_duration, x = ave_air_temp_adjusted)) + geom_point(aes(color = lakeid, shape = lakeid), alpha = 0.8) +
+scatter <-
+  ggplot(data = ntl_ice %>% filter(!is.na(ave_air_temp_adjusted) &
+                                     !is.na(ice_duration)),
+         aes(y = ice_duration, x = ave_air_temp_adjusted)) + geom_point(alpha = 0.8) +
   theme_minimal() +
   labs(title = "Air Temperature and Ice Duration of Lakes in Madison, WI",
-       y = "Ice Duration (Days)", x = "Temperature (Celsius)") + geom_smooth(method = "lm", color = "black", se = FALSE, size = 0.3)
+       y = "Ice Duration (Days)", x = "Temperature (Celsius)") + geom_smooth(
+         method = "lm",
+         color = "black",
+         se = FALSE,
+         size = 0.3
+       )
 scatter
 ```
 
+It appears that there is a negative correlation between the mean annual temperature and the amount of time that each lake was frozen.
+
+
+
+To compare the temperature with the ice duration on a time-series plot, calculate the percent change in ice duration and temperature. First, join the full dataset with the average ice duration data that we calculated earlier, and then add two columns with the percent changes.
+
 ```{r comparison, fig.width = 5}
-### https://www.datanovia.com/en/blog/how-to-create-a-ggplot-with-multiple-lines/
 pct_change <-
   ntl_ice %>% full_join(avg_ice) %>% mutate(
     pct_change_temp = (ave_air_temp_adjusted - ave_air_temp_adjusted[17]) *
@@ -78,16 +124,33 @@ pct_change <-
     pct_change_ice = (avg_ice_duration - avg_ice_duration[3]) * 100 / avg_ice_duration[3]
   ) %>% select(year, pct_change_temp, pct_change_ice)
 
-pct_change <- unique(arrange(pct_change,year))
+pct_change <- unique(arrange(pct_change, year))
 ```
 
+Then plot a time series to compare the magnitude in changes in temperature and ice duration. Use the `pivot longer` function so that both lines can easily be plotted on the same axes.
+
 ```{r, fig.width = 5}
-comparison_df <- pct_change  %>% pivot_longer(cols = c(pct_change_ice, pct_change_temp)) 
+comparison_df <-
+  pct_change  %>% pivot_longer(cols = c(pct_change_ice, pct_change_temp)) 
+```
 
+Time Series Plot:
 
-ggplot(comparison_df %>% filter((name == "pct_change_ice" & !is.na(value)) | name == "pct_change_temp"), aes(x = year)) +
+```{r}
+comparison_plot <- ggplot(comparison_df %>% filter((name == "pct_change_ice" &
+                                   !is.na(value)) | name == "pct_change_temp"),
+       aes(x = year)) +
   geom_line(aes(y = value, color = name)) +
   theme_minimal() +
   labs(x = "Year", y = "Percent Change", title = "Percent Change in Ice Duration and Temperature")
+comparison_plot
 ```
+
+It appears that the change in ice somewhat mirrors the change in temperature each year, as several spikes in temperature have a corresponding dip in ice duration. This may indicate a relationship between the two variables. 
+
+# Citation
+
+Anderson, L. and D. Robertson. 2020. Madison Wisconsin Daily Meteorological Data 1869 - current ver 32. Environmental Data Initiative. https://doi.org/10.6073/pasta/e3ff85971d817e9898bb8a83fb4c3a8b (Accessed 2021-03-08).
+
+Magnuson, J.J., S.R. Carpenter, and E.H. Stanley. 2021. North Temperate Lakes LTER: Ice Duration - Madison Lakes Area 1853 - current ver 35. Environmental Data Initiative. https://doi.org/10.6073/pasta/ab31f2489ee436beb73fc8f1d0213d97 (Accessed 2021-03-08).
 
