--- a/vignettes/nwt_pikas_vignette.Rmd
+++ b/vignettes/nwt_pikas_vignette.Rmd
@@ -122,4 +122,4 @@ weights_stage
 ```
 
 # How we processed the raw data
-`r knitr::spin_child(here::here("data-raw", "nwt_pikas_data.R"))`
+`r knitr::spin_child(here::here("data-raw", "nwt_stress.R"))`
