--- a/vignettes/ntl_ice_vignette.Rmd
+++ b/vignettes/ntl_ice_vignette.Rmd
@@ -15,11 +15,15 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup, fig.width = 5, dpi = 100}
-library(alohaal)
+library(lterdatasets)
 library(tidyverse)
 ```
 
 According to the [EPA](https://www.epa.gov/climate-indicators/climate-change-indicators-lake-ice#ref2), lake ice duration can be an indicator of climate change. This is because lake ice is dependent on several environmental factors, so changes in these factors will influence the formation of ice on top of lakes. As a result, the study and analysis of lake ice formation can inform scientists about how quickly the climate is changing, and are critical to minimizing disruptions to lake ecosystems. We can examine the ice duration of Lake Mendota, Lake Monona, and Lake Wingra, three lakes in the Madison, WI area.
+
+```{r}
+ntl_ice
+```
 
 ```{r box_plot, fig.width=5}
 lake_ice <-
@@ -52,6 +56,7 @@ avg_ice <- ntl_ice %>%
   group_by(year) %>%
   summarise(ice_duration = mean(ice_duration)) %>%
   rename(avg_ice_duration = ice_duration)
+avg_ice
 ```
 
 Time Series Plot:
@@ -71,15 +76,30 @@ avg_ice_duration_plot <-
 avg_ice_duration_plot
 ```
 
-The average ice duration in Madison is trending downwards. What environmental factors are influencing this change? [Research](http://hpkx.cnjournals.com/uploadfile/news_images/hpkx/2019-03-14/s41558-018-0393-56789.pdf) suggests that mean annual temperature is one of the primary factors that alter lake ice formation. We can look at the mean annual temperature of Madison, WI, to see if there is a corresponding change in climate that may have influenced the change in ice duration.
+The average ice duration in Madison is trending downwards. What environmental factors are influencing this change?
+
+[Research](http://hpkx.cnjournals.com/uploadfile/news_images/hpkx/2019-03-14/s41558-018-0393-56789.pdf) suggests that mean annual temperature is one of the primary factors that alter lake ice formation. We can look at the temperature data of Madison, WI found in `ntl_temps` to see if there is a corresponding change in climate that may have influenced the change in ice duration.
 
 (*Note that according to the original metadata: "Daily temperature data prior to 1884 were estimated from 3 times per day sampling and biases are expected and should not be comparable with data after that time."*)
 
+
+```{r}
+ntl_temps
+```
+
+Compute the mean annual temperature:
+
+```{r}
+ntl_annual_avg <- ntl_temps %>% 
+  group_by(year) %>% 
+  summarise(ave_air_temp_adjusted = mean(ave_air_temp_adjusted))
+ntl_annual_avg
+```
 Time Series Plot:
 
 ```{r temp, fig.width = 5}
 temp_plot <-
-  ggplot(ntl_ice %>% filter(!is.na(ave_air_temp_adjusted)),
+  ggplot(ntl_annual_avg %>% filter(!is.na(ave_air_temp_adjusted)),
          aes(x = year, y = ave_air_temp_adjusted)) +
   geom_line(alpha = 0.7) +
   theme_minimal() +
@@ -93,14 +113,23 @@ temp_plot <-
 temp_plot
 ```
 
-Since the mean annual temperature is trending upwards over the years, there may be a relationship between temperature and ice duration.
+There seems to be a general upward trend in the mean annual temperature. As a result, there may be a relationship between temperature and ice duration.
+
+To compare the ice cover and temperature data directly, the ntl_temps and ntl_ice datasets can be joined together. A common variable needs to be identified to do this. In this case, the datasets can be joined on the year of observation. Since there is one temperature for each year in `ntl_annual_avg`, each temperature will be mapped to the corresponding year in the joined table. For example, a `ave_air_temp_adjusted` value of 6.416 degrees Celsius will be added to each row that has a `year` value of 1869.
+
+```{r}
+ntl_full_join <- ntl_annual_avg %>% 
+  full_join(ntl_ice)
+ntl_full_join
+```
 
 Plot the temperature against the ice duration of each of the three lakes:
 
 ```{r scatter, fig.width = 5}
 scatter <-
-  ggplot(data = ntl_ice %>% filter(!is.na(ave_air_temp_adjusted) &
-                                     !is.na(ice_duration)),
+  ggplot(data = ntl_full_join %>%
+           filter(!is.na(ave_air_temp_adjusted) &
+                    !is.na(ice_duration)),
          aes(y = ice_duration, x = ave_air_temp_adjusted)) + geom_point(alpha = 0.8) +
   theme_minimal() +
   labs(title = "Air Temperature and Ice Duration of Lakes in Madison, WI",
@@ -113,18 +142,17 @@ scatter <-
 scatter
 ```
 
-It appears that there is a negative correlation between the mean annual temperature and the amount of time that each lake was frozen.
+It appears that there is a negative correlation between the mean annual temperature and the amount of time that each lake was frozen. This means that as temperature increases, the ice duration decreases.
 
 
-
-To compare the temperature with the ice duration on a time-series plot, calculate the percent change in ice duration and temperature. First, join the full dataset with the average ice duration data that we calculated earlier, and then add two columns with the percent changes.
+To compare the temperature with the ice duration on a time-series plot, calculate the percent change in ice duration and temperature from the earliest data point for both variables. The earliest year of observation for ice duration was 1851, and the earliest year of observation for temperature was 1869. These values can be determined from the `avg_ice` and `ntl_annual_avg` dataframes that were calculated earlier. First, join the full dataset with the average ice duration data that we calculated earlier, and then add two columns with the percent changes.
 
 ```{r comparison, fig.width = 5}
 pct_change <-
-  ntl_ice %>% full_join(avg_ice) %>% mutate(
-    pct_change_temp = (ave_air_temp_adjusted - ave_air_temp_adjusted[17]) *
-      100 / ave_air_temp_adjusted[17],
-    pct_change_ice = (avg_ice_duration - avg_ice_duration[3]) * 100 / avg_ice_duration[3]
+  ntl_full_join %>% full_join(avg_ice) %>% mutate(
+    pct_change_temp = (ave_air_temp_adjusted - ntl_annual_avg$ave_air_temp_adjusted[1]) *
+      100 / ntl_annual_avg$ave_air_temp_adjusted[1],
+    pct_change_ice = (avg_ice_duration - avg_ice$avg_ice_duration[1]) * 100 / avg_ice$avg_ice_duration[1]
   ) %>% select(year, pct_change_temp, pct_change_ice)
 
 pct_change <- unique(arrange(pct_change, year))
@@ -159,3 +187,6 @@ Anderson, L. and D. Robertson. 2020. Madison Wisconsin Daily Meteorological Data
 
 Magnuson, J.J., S.R. Carpenter, and E.H. Stanley. 2021. North Temperate Lakes LTER: Ice Duration - Madison Lakes Area 1853 - current ver 35. Environmental Data Initiative. https://doi.org/10.6073/pasta/ab31f2489ee436beb73fc8f1d0213d97 (Accessed 2021-03-08).
 
+# How we processed the raw data
+`r knitr::spin_child(here::here("data-raw", "ntl_temps_data.R"))`
+`r knitr::spin_child(here::here("data-raw", "ntl_ice_data.R"))`
